--- a/appveyor.yml
+++ b/appveyor.yml
@@ -67,6 +67,7 @@ after_build:
   - cmd: mv mysetup.exe setup.exe
   - cmd: 7z a %APPVEYOR_BUILD_VERSION%.zip setup.exe
   - cmd: mv %APPVEYOR_BUILD_VERSION%.zip ..\..
+  - cmd: mv c:\JUCE\extras\Projucer\Builds\VisualStudio2017\x64\Debug\App\Projucer.exe ..\..
 
 # to run your custom scripts instead of automatic MSBuild
 build_script:
@@ -81,7 +82,8 @@ build_script:
 artifacts:
   - path: $(APPVEYOR_BUILD_VERSION).zip
     name: setup
-  - path: ..\JUCE\extras\Projucer\Builds\VisualStudio2017\x64\Debug\App\Projucer.exe
+  - path: Projucer.exe
+    name: projucer
 
 #deploy:
 #  provider: S3
